feat: ユーザー管理情報をサマリExcel同フォルダのバイナリへ保存
- factory-operator-users.bin を summaryAiDispatchXlsxPath の親配下に配置
- PMOU ヘッダ付きバイナリ形式で永続化（暗号化なし）
- 旧 ~/.pm-ai-desktop/factory-operator-users.json から初回移行